gitfleet-cli/tests/snapshots/cli__help_api.snap
---
source: gitfleet-cli/tests/cli.rs
expression: output
---
Raw provider API access

Usage: gitfleet api [OPTIONS] <COMMAND>

Commands:
  get     Send a raw GET request to the provider API.
  post    Send a raw POST request to the provider API.
  put     Send a raw PUT request to the provider API.
  patch   Send a raw PATCH request to the provider API.
  delete  Send a raw DELETE request to the provider API.
  help    Print this message or the help of the given subcommand(s)

Options:
      --json           
      --debug          
      --theme <THEME>  [default: auto]
      --yes            
      --dry-run        
  -h, --help           Print help
